Modificaciones, ordenamiento y ts a js
Se ordenaron los archivos del programa, se modificaron algunas estructuras para poder arreglar los botones a futuro y también se pasaron los archivos typescript a javascript con un json.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <button id="postorder-button">Postorden</button>
         </div>
         <div id="tree-visualization">
-            <!-- -->
+            <!-- Los nodos del árbol se mostrarán aquí -->
         </div>
         <div id="node-info">
-            <!-- -->
+            <!-- Información del nodo seleccionado se mostrará aquí -->
         </div>
     </div>
     <script src="dist/visualizer.js"></script>
