--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="container">
         <h1>Visualizador de Árbol Rojo-Negro</h1>
         <div id="control-panel">
-            <input type="number" id="node-value" placeholder="Valor del nodo">
+            <input type="text" id="node-value" placeholder="Valor del nodo">
             <button id="insert-button">Insertar</button>
             <button id="search-button">Buscar</button>
             <button id="inorder-button">Inorden</button>
@@ -20,10 +20,10 @@
             <button id="postorder-button">Postorden</button>
         </div>
         <div id="tree-visualization">
-            <!-- Los nodos del árbol se mostrarán aquí -->
+            <!-- Los nodos del árbol -->
         </div>
         <div id="node-info">
-            <!-- Información del nodo seleccionado se mostrará aquí -->
+            <!-- Información del nodo seleccionado -->
         </div>
     </div>
     <script src="dist/visualizer.js"></script>
