correcion metodo, eliminar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div id="control-panel">
             <input type="number" id="value" placeholder="Valor del nodo">
             <button id="insert">Insertar</button>
+            <button id="delete">Eliminar</button>
             <button id="search">Buscar</button>
             <button id="inorder">Inorden</button>
             <button id="preorder">Preorden</button>
